# war-fire-model

./: .gitignore  1_preprocessing.ipynb  2_training.ipynb  3_inference.ipynb  4_plotting.ipynb  5_nearest_neighbor.ipynb  6_explainable_ai.ipynb  LICENSE  README.md  TODO.txt  classification.ipynb  clustering.ipynb  plotting.ipynb  preprocessing.ipynb  pyproject.toml
config/: config.py  ukr_weather_api_call_data.csv
dashboard/: dashboard.py
data/ukr_borders/: README.txt
data/ukr_fires/: README.txt  ukr_fire_data_2000.csv  ukr_fire_data_2001.csv  ukr_fire_data_2002.csv  ukr_fire_data_2003.csv  ukr_fire_data_2004.csv  ukr_fire_data_2005.csv  ukr_fire_data_2006.csv  ukr_fire_data_2007.csv  ukr_fire_data_2008.csv  ukr_fire_data_2009.csv  ukr_fire_data_2010.csv  ukr_fire_data_2011.csv  ukr_fire_data_2012.csv  ukr_fire_data_2013.csv  ukr_fire_data_2016.csv  ukr_fire_data_2018.csv  ukr_fire_data_2019.csv  ukr_fire_data_2021.csv  ukr_fire_data_2022.csv  ukr_fire_data_2023.csv
data/ukr_land_use/: README.txt  ukr_land_use_2022_10km.csv  ukr_land_use_2022_50km.csv
data/ukr_oblasts/: ukr_cities.csv  ukr_oblasts_10km.csv  ukr_oblasts_50km.csv  ukr_oblasts_ids.csv
data/ukr_pop_density/: README.txt  ukr_pop_density_2020_10km.csv  ukr_pop_density_2020_50km.csv
data/ukr_war_events/: ukr_img_overlays.csv  ukr_war_events.csv
data/ukr_weather/: ukr_weather_data_2015.csv  ukr_weather_data_2016.csv  ukr_weather_data_2017.csv  ukr_weather_data_2018.csv  ukr_weather_data_2019.csv  ukr_weather_data_2020.csv  ukr_weather_data_2021.csv  ukr_weather_data_2022.csv  ukr_weather_data_2023.csv  ukr_weather_data_2024.csv
input_data/processed/: 36T_20220101-20230101_001.csv  37T_20220101-20230101_001.csv
output_data/: abnormal_fires_validation.csv  one_nearest_neighbor_fire_id_pairs.csv
results/: calibration_predictions.csv
saved_models/: pca.pkl  scaler.pkl
utils/: data_utils.py  file_utils.py
(+73 files in other folders)
