[tool.poetry]
name = "war-fire-model"
version = "0.1.0"
description = "Extenstion of the Economist's War Fire Model."
authors = ["Gianluca Manca <gianluca.manca89@gmail.com>"]
license = "MIT-License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
rasterio = "^1.4.0"
scikit-learn = "^1.5.2"
st-dbscan = "^0.2.2"
setuptools = "^75.1.0"
llvmlite = "^0.43.0"
pyod = "^2.0.2"
pynomaly = "^0.3.3"
tensorflow = "^2.17.0"
tensorflow-cpu = "^2.17.0"
keras = "^3.5.0"
torch = "^2.4.1"
quantile-forest = "^1.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
