[tool.poetry]
name = "war-fire-model"
version = "0.1.0"
description = "Extenstion of the Economist's War Fire Model."
authors = ["Gianluca Manca <gianluca.manca89@gmail.com>"]
license = "MIT-License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
setuptools = "^75.1.0"
llvmlite = "^0.43.0"
quantile-forest = "^1.3.11"
lime = "^0.2.0.1"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
certifi = "^2024.8.30"
joblib = "^1.4.2"
dill = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"